fix: correct blizko list, list_bordered and radio [PATCH]: Убирает overflow: hidden; у списка. В замен добавляет скругление углов у первого и последнего элемента списка с бордером. Подкорректированы стили радиобаттона таким образом, чтобы "кружок" чекнутого радиобаттона встал ровно по середине и текст и лейбла не "нырял" под радиобаттон. https://jira.railsc.ru/browse/BPC-18979

--- a/src/blocks/blizko/list/list_bordered.css
+++ b/src/blocks/blizko/list/list_bordered.css
@@ -3,6 +3,16 @@
   border: 1px solid var(--black-l85);
 }
 
+.aui-list_bordered .aui-list__item:first-of-type {
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+
+.aui-list_bordered .aui-list__item:last-of-type {
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
 .aui-list_bordered-all .aui-list__item {
   margin-bottom: 0;
   border-radius: 0;
